{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 95,
  "lineage": "7984033f-bac7-8465-4ea3-eec5ad20380a",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-11-26T12:30:48.194-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-479314/global/firewalls/allow-http-ingress-app",
            "log_config": [],
            "name": "allow-http-ingress-app",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-479314/global/networks/instance-vpc-network",
            "priority": 1000,
            "project": "terraform-479314",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-479314/global/firewalls/allow-http-ingress-app",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-11-26T12:30:48.236-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/terraform-479314/global/firewalls/allow-ssh-ingress-app",
            "log_config": [],
            "name": "allow-ssh-ingress-app",
            "network": "https://www.googleapis.com/compute/v1/projects/terraform-479314/global/networks/instance-vpc-network",
            "priority": 1000,
            "project": "terraform-479314",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-479314/global/firewalls/allow-ssh-ingress-app",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "app_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20251111",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-479314/zones/europe-north1-a/disks/app-server-0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terraform-479314/zones/europe-north1-a/instances/app-server-0",
            "instance_id": "3008580969944505750",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "startup-script": "#!/bin/bash\nsudo apt update\nsudo apt install -y nginx\necho \"\u003ch1\u003eHello TO Olexandra_Devops_guru 0 (Serving via Load Balancer)\u003c/h1\u003e\" | sudo tee /var/www/html/index.html\n"
            },
            "metadata_fingerprint": "lMBZ1hphgEA=",
            "name": "app-server-0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.228.13.27",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-479314/global/networks/instance-vpc-network",
                "network_ip": "10.166.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-479314/regions/europe-north1/subnetworks/instance-vpc-network",
                "subnetwork_project": "terraform-479314"
              }
            ],
            "project": "terraform-479314",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-479314/zones/europe-north1-a/instances/app-server-0",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-north1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20251111",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/terraform-479314/zones/europe-north1-a/disks/app-server-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/terraform-479314/zones/europe-north1-a/instances/app-server-1",
            "instance_id": "2714705074030566806",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "startup-script": "#!/bin/bash\nsudo apt update\nsudo apt install -y nginx\necho \"\u003ch1\u003eHello TO Olexandra_Devops_guru 1 (Serving via Load Balancer)\u003c/h1\u003e\" | sudo tee /var/www/html/index.html\n"
            },
            "metadata_fingerprint": "LocSR7Ee1sA=",
            "name": "app-server-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.88.168.161",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/terraform-479314/global/networks/instance-vpc-network",
                "network_ip": "10.166.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/terraform-479314/regions/europe-north1/subnetworks/instance-vpc-network",
                "subnetwork_project": "terraform-479314"
              }
            ],
            "project": "terraform-479314",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-479314/zones/europe-north1-a/instances/app-server-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-north1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/terraform-479314/global/networks/instance-vpc-network",
            "mtu": 0,
            "name": "instance-vpc-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "3097578954379943331",
            "project": "terraform-479314",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/terraform-479314/global/networks/instance-vpc-network"
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}